force-app/main/default/objects/Sync_User_Field__c/Sync_User_Field__c.object-meta.xml
<CustomObject>
    <label>Sync User Field</label>
    <nameField>
        <label>Sync User Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sync User Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>