force-app/main/default/objects/Sync_User_Field__c/fields/HOU_Name__c.field-meta.xml
<CustomField>
    <fullName>HOU_Name__c</fullName>
    <label>HOU Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>