force-app/main/default/objects/Sync_User_Field__c/fields/LIVE_Name__c.field-meta.xml
<CustomField>
    <fullName>LIVE_Name__c</fullName>
    <label>LIVE Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>