force-app/main/default/objects/Sync_User_Field__c/fields/MPLS_Name__c.field-meta.xml
<CustomField>
    <fullName>MPLS_Name__c</fullName>
    <label>MPLS Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>