force-app/main/default/objects/Sync_User_Field__c/fields/Multiply_by_Therm_Factor__c.field-meta.xml
<CustomField>
    <fullName>Multiply_by_Therm_Factor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>field should be multiplied by therm factor before value creation.  Therm factor is 1 for HOU and STL</description>
    <inlineHelpText>field should be multiplied by therm factor before value creation.  Therm factor is 1 for HOU and STL</inlineHelpText>
    <label>Multiply by Therm Factor</label>
    <type>Checkbox</type>
</CustomField>