force-app/main/default/objects/Sync_User_Field__c/fields/Source_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Object_API_Name__c</fullName>
    <formula>CASE( TEXT( Field_Type__c ), 
&#39;Customer&#39;, &#39;Account&#39;, 
&#39;Billing&#39;, &#39;Bill_Group__c&#39;,
&#39;Account&#39;, &#39;Premises__c&#39;,
&#39;Contract&#39;, &#39;CESContract__c&#39;,
&#39;Credit&#39;, &#39;Account_Credit_Approval__c&#39;,
null)</formula>
    <label>Source Object API Name</label>
    <type>Text</type>
</CustomField>