force-app/main/default/objects/Sync_User_Field__c/fields/Source_Object_Sync_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Object_Sync_Field_Name__c</fullName>
    <description>the field from the source object that has the value to be sent to safari</description>
    <inlineHelpText>the field from the source object that has the value to be sent to safari</inlineHelpText>
    <label>Source Object Sync Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>