force-app/main/default/objects/Sync_User_Field__c/fields/STL_Name__c.field-meta.xml
<CustomField>
    <fullName>STL_Name__c</fullName>
    <label>STL Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>