force-app/main/default/objects/Sync_User_Field__c/fields/Sync_HOU__c.field-meta.xml
<CustomField>
    <fullName>Sync_HOU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync HOU</label>
    <type>Checkbox</type>
</CustomField>