force-app/main/default/objects/Sync_User_Field__c/fields/Sync_LIVE__c.field-meta.xml
<CustomField>
    <fullName>Sync_LIVE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync LIVE</label>
    <type>Checkbox</type>
</CustomField>