force-app/main/default/objects/Sync_User_Field__c/fields/Sync_MPLS__c.field-meta.xml
<CustomField>
    <fullName>Sync_MPLS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync MPLS</label>
    <type>Checkbox</type>
</CustomField>