force-app/main/default/objects/Sync_User_Field__c/fields/Sync_STL__c.field-meta.xml
<CustomField>
    <fullName>Sync_STL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync STL</label>
    <type>Checkbox</type>
</CustomField>