force-app/main/default/objects/Sync_User_Field__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Field_Type__c</columns>
    <columns>Source_Object_API_Name__c</columns>
    <columns>Source_Object_Sync_Field_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>