force-app/main/default/objects/Sync_User_Field__c/listViews/Bill_Group_User_Fields.listView-meta.xml
<ListView>
    <fullName>Bill_Group_User_Fields</fullName>
    <columns>NAME</columns>
    <columns>Source_Object_API_Name__c</columns>
    <columns>Source_Object_Sync_Field_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Field_Type__c</field>
        <operation>equals</operation>
        <value>Billing</value>
    </filters>
    <label>Bill Group User Fields</label>
    <language>en_US</language>
</ListView>